--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.3.0",
+        "php": ">=7.2.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "kartik-v/yii2-widget-datepicker": "dev-master"
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "edofre/yii2-fullcalendar": "V1.0.11"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
